# cam_acq

./: .all-contributorsrc  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  normal_template.csv  pylintrc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_lint.txt  requirements_pypi.txt  requirements_test.txt  requirements_tests.txt  sample_state.csv  setup.cfg  setup.py  sirna_template.csv  structure.txt  template_template.csv  tox.ini
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: check-rc.yml  ci.yml  draft-release.yml  generate-changelog.yml  issue-manager.yml  labels.yml  release.yml  test.yml
cam_acq/: __main__.py  command.py  config.py  config.yml  control.py  gain.py  image.py  log.py  socket_client.py
cam_acq/data/: gain.r
cam_acq/tests/: __init__.py  cam_acq_tests.py  test_client.py  test_server.py
camacq/: __init__.py  __main__.py  bootstrap.py  command.py  config.py  config.yml  const.py  control.py  event.py  exceptions.py  gain.py  helper.py  image.py  log.py  plate.py  sample.py  socket_client.py  util.py
camacq/api/: __init__.py
camacq/api/leica/: __init__.py  command.py  helper.py
camacq/automations/: __init__.py  event.py
camacq/data/: 10x_gain.csv  10x_gain.yml  40x_gain.csv  40x_gain.yml  63x_gain.csv  63x_gain.yml  __init__.py  config.yml  gain.r
camacq/helper/: __init__.py  template.py
camacq/plugins/: __init__.py  gain.py  rename_image.py
camacq/plugins/api/: __init__.py
camacq/plugins/automations/: __init__.py  event.py
camacq/plugins/custom/: sample.py
camacq/plugins/leica/: __init__.py  command.py  helper.py  sample.py
camacq/plugins/sample/: __init__.py  helper.py
camacq/tests/: __init__.py  camacq_tests.py  test_client.py  test_server.py
docs/: Makefile  conf.py  index.md  index.rst  installation.md  make.bat  usage.md
docs/source/: api.rst  camacq.api.leica.rst  camacq.api.rst  camacq.automations.rst  camacq.data.rst  camacq.helper.rst  camacq.plugins.api.rst  camacq.plugins.automations.rst  camacq.plugins.leica.rst  camacq.plugins.rst  camacq.plugins.sample.rst  camacq.rst  camacq.tests.rst  modules.rst  plugins.rst
docs/source/api/: leica.rst
docs/source/api/leica/: command.rst  helper.rst
docs/source/plugins/: gain.rst  rename_image.rst
scripts/: camacq  gen_changelog  gen_changelog.py  setup_tests.py
src/camacq/: __init__.py  __main__.py  bootstrap.py  config.py  const.py  control.py  event.py  exceptions.py  image.py  log.py  util.py
src/camacq/data/: __init__.py
src/camacq/helper/: __init__.py  template.py
src/camacq/plugins/: __init__.py  rename_image.py
src/camacq/plugins/api/: __init__.py
src/camacq/plugins/automations/: __init__.py  event.py
src/camacq/plugins/leica/: __init__.py  command.py  helper.py  sample.py
src/camacq/plugins/sample/: __init__.py
tests/: common.py  conftest.py  test_client.py  test_command.py  test_config.py  test_control.py  test_dunder_main.py  test_event.py  test_gain.py  test_helper.py  test_image.py  test_server.py  test_util.py  test_workflow.py
tests/api/leica/: test_command.py  test_leica.py
tests/automations/: test_automations.py
tests/helper/: test_helper.py  test_template.py
tests/plugins/: __init__.py  test_gain.py
tests/plugins/api/leica/: test_leica.py
tests/plugins/automations/: __init__.py  test_automations.py
tests/plugins/leica/: __init__.py  test_command.py  test_helper.py  test_leica.py
