[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0.3"]

[project]
authors = [
  {name = "Martin Hjelmare", email = "marhje52@gmail.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
  "async_timeout",
  "colorlog",
  "jinja2",
  "leicacam>=0.5.0",
  "leicaimage",
  "numpy",
  "ruamel.yaml>=0.15",
  "tifffile",
  "voluptuous",
  "xmltodict",
]
description = "Control microscope through client server program."

license = "Apache-2.0"
name = "camacq"
readme = "README.md"
requires-python = ">=3.11"
scripts.camacq = "camacq.__main__:main"
urls."Bug Tracker" = "https://github.com/CellProfiling/cam_acq/issues"
urls.Changelog = "https://github.com/CellProfiling/cam_acq/blob/main/CHANGELOG.md"
urls.documentation = "https://cam-acq.readthedocs.io"
urls.repository = "https://github.com/CellProfiling/cam_acq"
version = "0.9.0"

[project.optional-dependencies]
cli = [
  "typer>=0.15,<1",
]

[dependency-groups]
dev = [
  "codespell==2.4.2",
  "copier==9.13.0",
  "mypy==1.19.1",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.0.0",
  "python-semantic-release>=10,<11",
  "ruff==0.15.5",
  "sybil[pytest]==9.3.0",
]
docs = [
  "furo; python_version>='3.12'",
  "myst-parser; python_version>='3.12'",
  "sphinx==9.*; python_version>='3.12'",
  "sphinx-autobuild; python_version>='3.12'",
]

[tool.ruff]
line-length = 88
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.isort.known-first-party = ["camacq", "tests"]
lint.per-file-ignores."conftest.py" = ["D100"]
lint.per-file-ignores."docs/conf.py" = ["D100"]
lint.per-file-ignores."setup.py" = ["D100"]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.select = [
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # flake8-docstrings
  "E", # pycodestyle
  "F", # pyflake
  "I", # isort
  "RUF", # ruff specific
  "S", # flake8-bandit
  "UP", # pyupgrade
  "W", # pycodestyle
]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest]
addopts = [
  "-Wdefault",
  "-p no:doctest",
  "--cov=camacq",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
asyncio_mode = "auto"
minversion = "9.0"
pythonpath = ["src"]

[tool.coverage]
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.exclude_lines = [
  "@overload",
  "def __repr__",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise NotImplementedError",
]
run.branch = true

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = [
  "docs/.*",
  "setup.py",
]
mypy_path = "src/"
no_implicit_optional = true
overrides = [
  {module = "tests.*", allow_untyped_defs = true},
  {module = "docs.*", ignore_errors = true},
]
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[tool.semantic_release]
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
changelog.environment.keep_trailing_newline = true
changelog.exclude_commit_patterns = [
  "chore(?:\\([^)]*?\\))?: .+",
  "ci(?:\\([^)]*?\\))?: .+",
  "refactor(?:\\([^)]*?\\))?: .+",
  "style(?:\\([^)]*?\\))?: .+",
  "test(?:\\([^)]*?\\))?: .+",
  "build\\((?!deps\\): .+)",
  "Merged? .*",
  "Initial [Cc]ommit.*", # codespell:ignore
]
changelog.mode = "update"
major_on_zero = false
tag_format = "{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
  "src/camacq/__init__.py:__version__",
  "docs/conf.py:release",
]
